# kufar-bot

./: .dockerignore  .env.example  .gitignore  DEPLOY-WINDOWS.md  DEPLOY.md  Dockerfile  LOCAL-TEST.md  Makefile  README.md  clone-and-run.cmd  collect-logs.cmd  docker-compose.prod.yml  docker-compose.yml  install-windows.ps1  pyproject.toml  register-task.ps1  run-bot.cmd  setup-windows.cmd  update-windows.ps1
.github/workflows/: ci.yml  docker.yml
docs/: architecture.md
scripts/: install.sh  lib.sh  remote-update.sh  update.sh
src/kufar_bot/: __init__.py  config.py  logging_setup.py  main.py
src/kufar_bot/bot/: __init__.py  admin_notify.py  app.py  favorites_list_view.py  group_display.py  groups_nav.py  keyboards.py  middlewares.py  minus_draft.py  minus_list_view.py  minus_listing.py  minus_nav.py  minus_scope.py  schedule_nav.py  states.py  users_list_view.py
src/kufar_bot/db/: __init__.py  migrate.py  models.py  repository.py  session.py
src/kufar_bot/kufar/: __init__.py  client.py  filters.py  minus_suggest.py  models.py  url_parser.py
src/kufar_bot/services/: __init__.py  listing_collage.py  listing_digest.py  listing_format.py  listing_send.py  poller.py  (+4 more)
tests/: test_core.py  test_favorites_list.py  test_group_display.py  test_groups_nav.py  test_listing_collage.py  test_listing_digest.py  test_listing_format.py  test_minus_draft.py  test_minus_list.py  test_minus_listing.py  test_minus_scope.py  test_minus_suggest.py  test_poll_cancel.py  test_poll_first_run.py  test_schedule_nav.py  test_url_short.py  test_users_list_view.py  test_watermark.py
(+7 files in other folders)
