[project]
name = "kufar-bot"
version = "0.1.0"
description = "Telegram-бот мониторинга объявлений Kufar.by"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.13,<4",
    "sqlalchemy>=2.0,<3",
    "aiosqlite>=0.20,<1",
    "apscheduler>=3.10,<4",
    "curl-cffi>=0.7,<1",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "structlog>=24.4,<25",
    "pillow>=11.0,<12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "ruff>=0.8,<1",
]

[project.scripts]
kufar-bot = "kufar_bot.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kufar_bot"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
